# napari-threedee

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-and-deploy-docs.yml  test-docs-pr.yml  test_and_deploy.yml
.napari-hub/: config.yml
docs/: _config.yml  _toc.yml  gallery_conf.py  index.md
docs/API/: geometry_utilities.md  napari_utilities.md  selection_utilities.md
docs/annotations/: io.md  point_spec.md  specifications.md  sphere_spec.md  spline_spec.md
docs/api/: api.rst
docs/dev_guides/: core_concepts.md  dev_guides.md  manipulators.md
docs/examples/: README.md  camera_spline_plugin.py  empty_surface.py  mesh_headlight_plugin.py  points_manipulator_plugin.py  render_plane_manipulator_plugin.py
docs/examples/plugin/: README.md  ambient_occlusion_plugin.py  camera_spline.py  camera_spline_plugin.py  clip_plane_manipulator.py  label_annotator_plugin.py  layer_manipulator.py  layer_manipulator_plugin.py  mesh_headlight.py  mesh_headlight_plugin.py  path_annotator_plugin.py  plane_labeler_plugin.py  plane_point_annotator.py  point_annotator_plugin.py  points_manipulator_plugin.py  render_plane_manipulator.py  render_plane_manipulator_plugin.py  sphere_annotator_plugin.py  spline_annotator.py  spline_annotator_plugin.py  surface_annotator_plugin.py
docs/getting_started/: developers.md  users.md
docs/how_to/: ambient_occlusion.md  clipping_plane_manipulator.md  how_to.md  how_to_render_plane_manipulator.md  label_annotator.md  layer_manipulator.md  path_annotator.md  plane_labeler.md  point_annotator.md  point_manipulator.md  render_plane_manipulator.md  sphere_annotator.md  spline_annotator.md
docs/stylesheets/: extra.css
docs/tutorials/: segmentation_tutorial.md
examples/: filament_annotator_widget.py  mesh_headlight.py  new_manipulator.py  new_manipulator2.py  plane_point_annotator_widget.py  points_manipulator.py  rendering_plane.py  rendering_plane_widget.py  volume.py  volume_manipulator.py
examples/plugin/: filament_annotator.py  layer_manipulator.py  mesh_headlight.py  path_annotator.py  plane_point_annotator.py  point_annotator.py  points_manipulator.py  render_plane_manipulator.py  sphere_annotator.py  surface_annotator.py
resources/: threedee_logo.ai
src/napari_threedee/: __init__.py  _dock_widget.py  _dock_widgets.py  _manipulator_base.py  _sample_data.py  base.py  conftest.py  dock_widgets.py  geometry_utils.py  mouse_callbacks.py  napari.yaml
src/napari_threedee/_backend/: __init__.py  threedee_model.py  threedee_widget_base.py  threedee_widget_model.py
src/napari_threedee/_backend/manipulator/: _interface.py  axis_model.py  central_axis.py  drag_managers.py  manipulator_model.py  napari_manipulator.py  napari_manipulator_backend.py  rotator.py  translator.py  utils.py  vispy_manipulator_visual.py  vispy_visual_data.py
src/napari_threedee/_backend/visuals/: finite_plane_visual.py
src/napari_threedee/_infrastructure/: _threedee_base.py  _threedee_widget_base.py
src/napari_threedee/_infrastructure/manipulator/: central_axis.py  drag_managers.py  napari_manipulator.py  translator.py
src/napari_threedee/_infrastructure/utils/: napari_utils.py
src/napari_threedee/_tests/: conftest.py  test_dock_widget.py  test_mouse_callbacks.py
src/napari_threedee/annotators/: __init__.py  base.py  constants.py  filament_annotator.py  plane_point_annotator.py  point_annotator.py  points.py  qt_annotators.py  qt_filament_annotator.py  qt_plane_point_annotator.py  qt_sphere_annotator.py  qt_spline_annotator.py  sphere_annotator.py  spheres.py  spline_annotator.py  surface_annotator.py
src/napari_threedee/annotators/_qt/: __init__.py  qt_label_annotator.py  qt_path_annotator.py  qt_plane_point_annotator.py  qt_point_annotator.py  qt_sphere_annotator.py  qt_spline_annotator.py  qt_surface_annotator.py
src/napari_threedee/annotators/_tests/: conftest.py  test_filament_annotator.py  test_path_annotator.py  test_plane_labeler.py  test_plane_point_annotator.py  test_point_annotator.py  test_sphere_annotator.py  test_spline_annotator.py
src/napari_threedee/annotators/dipoles/: __init__.py  annotator.py  constants.py  validation.py
src/napari_threedee/annotators/disks/: __init__.py  annotator.py  constants.py
src/napari_threedee/annotators/io/: __init__.py  _napari.py  constants.py  point.py  sphere.py  spline.py
src/napari_threedee/annotators/label/: __init__.py  annotator.py
src/napari_threedee/annotators/paths/: __init__.py  annotator.py  constants.py  sampler.py  validation.py
src/napari_threedee/annotators/points/: __init__.py  annotator.py  constants.py  data_model.py  validation.py
src/napari_threedee/annotators/spheres/: __init__.py  annotator.py  constants.py  data_model.py  validation.py
src/napari_threedee/annotators/splines/: __init__.py  annotator.py  constants.py  data_model.py  validation.py
src/napari_threedee/annotators/surfaces/: __init__.py  annotator.py  constants.py  validation.py
src/napari_threedee/data_models/: __init__.py  dipoles.py  disks.py  paths.py  points.py  spheres.py  spline_sampler.py  surfaces.py
src/napari_threedee/lighting/: lighting_control.py  qt_lighting_control.py
src/napari_threedee/manipulator/: _napari.py  axis_model.py  central_axis.py  drag_managers.py  manipulator.py  manipulator_visual_data.py  model.py  napari_manipulator.py  translator.py  vispy_manipulator_visual.py  vispy_visual.py  vispy_visual_data.py
src/napari_threedee/manipulators/: __init__.py  _drag_manager.py  _manipulator_components.py  _manipulator_visual.py  base_manipulator.py  clip_plane_manipulator.py  constants.py  layer_manipulator.py  manipulator_utils.py  new_manipulator.py  point_manipulator.py  qt_manipulators.py  qt_render_plane_manipulator.py  render_plane_manipulator.py
src/napari_threedee/utils/: geometry.py  mouse_callbacks.py  napari_utils.py  selection_utils.py
src/napari_threedee/visualization/: __init__.py  camera_spline.py  lighting_control.py  qt_camera_spline.py
(+52 files in other folders)
