[metadata]
name = napari-threedee

author = napari team
author_email = napari-steering-council@googlegroups.com
url = https://github.com/alisterburt/napari-threedee
license = BSD-3-Clause
description = A suite of useful tools based on 3D interactivity in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/alisterburt/napari-threedee/issues
    Documentation = https://github.com/alisterburt/napari-threedee#README.md
    Source Code = https://github.com/alisterburt/napari-threedee
    User Support = https://github.com/alisterburt/napari-threedee/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    napari
    numpy
    qtpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-threedee = napari_threedee

[options.extras_require]
dev =
    furo
    jupyter-book
    sphinx-autodoc-typehints
