[metadata]
name = napari-threedee
author = napari team
author_email = napari-steering-council@googlegroups.com
url = https://github.com/alisterburt/napari-threedee
license = BSD-3-Clause
description = A suite of useful tools based on 3D interactivity in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/napari-threedee/napari-threedee/issues
	Documentation = https://github.com/napari-threedee/napari-threedee#README.md
	Source Code = https://github.com/napari-threedee/napari-threedee
	User Support = https://github.com/napari-threedee/napari-threedee/issues

[options]
packages = find:
python_requires = >=3.8
package_dir = 
	=src
setup_requires = setuptools_scm
install_requires =
	einops
	imageio>=2.5.0,!=2.11.0,!=2.22.1
	libigl
	magicgui
	morphosamplers
	mrcfile
	napari>=0.5.0
	numpy
	pandas
	pooch
	psygnal
	pydantic
	qtpy
	scipy
	superqt
	vispy
	zarr

include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-threedee = napari_threedee:napari.yaml

[options.extras_require]
dev =
	lxml[html_clean]>5 # https://github.com/napari/napari/pull/6799
	mkdocs
	mkdocs-gallery>0.7.6
	mkdocs-material
	mkdocstrings[python]
	mkdocs-video
	pytest
	pytest-qt
	qtgallery
	scikit-image[data]

[options.package_data]
napari_threedee = napari.yaml
